Aun no se solucional el error de eventos en el controller

--- a/src/Vistas/VistaDashboard.form
+++ b/src/Vistas/VistaDashboard.form
@@ -85,6 +85,9 @@
                   <Color id="Default Cursor"/>
                 </Property>
               </Properties>
+              <AccessibilityProperties>
+                <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="btnTienda"/>
+              </AccessibilityProperties>
               <Events>
                 <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnTiendaMouseEntered"/>
                 <EventHandler event="mouseExited" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnTiendaMouseExited"/>
