--- a/src/Vistas/PanelTienda.form
+++ b/src/Vistas/PanelTienda.form
@@ -218,6 +218,9 @@
     </Component>
     <Component class="javax.swing.JTextField" name="txtPrecioTotal">
       <Properties>
+        <Property name="disabledTextColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="0" green="0" red="0" type="rgb"/>
+        </Property>
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
       <Constraints>
@@ -241,6 +244,9 @@
     </Component>
     <Component class="javax.swing.JTextField" name="txtNumeroDeProductos">
       <Properties>
+        <Property name="disabledTextColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="0" green="0" red="0" type="rgb"/>
+        </Property>
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
       <Constraints>
