--- a/src/Vistas/PanelCrearCliente.form
+++ b/src/Vistas/PanelCrearCliente.form
@@ -138,11 +138,10 @@
         <Component class="javax.swing.JComboBox" name="comboGeneroCliente">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="4">
-                <StringItem index="0" value="Item 1"/>
-                <StringItem index="1" value="Item 2"/>
-                <StringItem index="2" value="Item 3"/>
-                <StringItem index="3" value="Item 4"/>
+              <StringArray count="3">
+                <StringItem index="0" value="No establecido"/>
+                <StringItem index="1" value="M"/>
+                <StringItem index="2" value="F"/>
               </StringArray>
             </Property>
           </Properties>
